2006-06-24  Li Guanglei <guanglei@cn.ibm.com>
	
	* iosyscall.stp, register_events.stp: change the return type from string to int64_t
	for better performance. sub-hooks for each iosyscall.
	* lket_trace.stp: make update_record() work for ascii tracing

2006-06-21  Li Guanglei <guanglei@cn.ibm.com>
	
	* scsi.stp, ioscheduler.stp, register_event.stp: 
	More data items for scsi and ioscheduler event hooks
	* ioscheduler.stp: delete filter_by_pid filter for io scheduler
	event hooks
	
2006-06-15  Li Guanglei <guanglei@cn.ibm.com>
	
	* iosyscall.stp: new event hooks for io related syscalls
	* hookid_defs.stp: add the necessary IDs for iosyscall event hooks
	* register_event.stp: add corresponding event register calls
	of the newly added io syscall event hooks
	
2006-06-09  Li Guanglei <guanglei@cn.ibm.com>
	
	* *.stp: New design of making user able to append extra trace data.
	lket_backtrace() is deleted.
	* register_event.stp: write the metainfo of trace data.
	
2006-06-01  Li Guanglei <guanglei@cn.ibm.com>
	
	* *.stp: make user able to append extra trace data. The
	way of logging backtrace is also changed 
	
2006-05-25  Li Guanglei <guanglei@cn.ibm.com>
	
	* hookid_defs.stp, ioscheduler.stp, lket_trace.stp, netdev.stp,
	pagefault.stp, process.stp, scsi.stp, syscalls.stp, tskdispatch.stp,
	utils.stp: explicitly add type qualifier for different arch to 
	make _stp_vsnprintf get the argument by va_arg correctly.
	
2006-05-18  Li Guanglei <guanglei@cn.ibm.com>
	
	Initial version by Li Guanglei.
	* hookid_defs.stp, ioscheduler.stp, lket_trace.stp, netdev.stp,
	pagefault.stp, process.stp, scsi.stp, syscalls.stp, tskdispatch.stp, utils.stp
