@@ -29,6 +29,8 @@ int _GROUP_TASK = 5;
 int _GROUP_SCSI = 6;
 int _GROUP_PAGEFAULT = 7;
 int _GROUP_NETDEV = 8;
+int _GROUP_IOSYSCALL = 9;
+int _GROUP_AIO = 10;
 
 /* hookIDs defined inside each group */
 int _HOOKID_REGSYSEVT = 1;
@@ -57,6 +59,67 @@ int _HOOKID_PAGEFAULT = 1;
 
 int _HOOKID_NETDEV_RECEIVE = 1;
 int _HOOKID_NETDEV_TRANSMIT = 2;
+
+int _HOOKID_IOSYSCALL_OPEN_ENTRY = 1;
+int _HOOKID_IOSYSCALL_OPEN_RETURN = 2;
+
+int _HOOKID_IOSYSCALL_CLOSE_ENTRY = 3;
+int _HOOKID_IOSYSCALL_CLOSE_RETURN = 4;
+
+int _HOOKID_IOSYSCALL_READ_ENTRY = 5;
+int _HOOKID_IOSYSCALL_READ_RETURN = 6;
+
+int _HOOKID_IOSYSCALL_WRITE_ENTRY = 7;
+int _HOOKID_IOSYSCALL_WRITE_RETURN = 8;
+
+int _HOOKID_IOSYSCALL_READV_ENTRY = 9;
+int _HOOKID_IOSYSCALL_READV_RETURN = 10;
+
+int _HOOKID_IOSYSCALL_WRITEV_ENTRY = 11;
+int _HOOKID_IOSYSCALL_WRITEV_RETURN = 12;
+
+int _HOOKID_IOSYSCALL_PREAD64_ENTRY = 13;
+int _HOOKID_IOSYSCALL_PREAD64_RETURN = 14;
+
+int _HOOKID_IOSYSCALL_PWRITE64_ENTRY = 15;
+int _HOOKID_IOSYSCALL_PWRITE64_RETURN = 16;
+
+int _HOOKID_IOSYSCALL_READAHEAD_ENTRY = 17;
+int _HOOKID_IOSYSCALL_READAHEAD_RETURN = 18;
+
+int _HOOKID_IOSYSCALL_SENDFILE_ENTRY = 19;
+int _HOOKID_IOSYSCALL_SENDFILE_RETURN = 20;
+
+int _HOOKID_IOSYSCALL_LSEEK_ENTRY = 21;
+int _HOOKID_IOSYSCALL_LSEEK_RETURN = 22;
+
+int _HOOKID_IOSYSCALL_LLSEEK_ENTRY = 23;
+int _HOOKID_IOSYSCALL_LLSEEK_RETURN = 24;
+
+int _HOOKID_IOSYSCALL_SYNC_ENTRY = 25;
+int _HOOKID_IOSYSCALL_SYNC_RETURN = 26;
+
+int _HOOKID_IOSYSCALL_FSYNC_ENTRY = 27;
+int _HOOKID_IOSYSCALL_FSYNC_RETURN = 28;
+
+int _HOOKID_IOSYSCALL_FDATASYNC_ENTRY = 29;
+int _HOOKID_IOSYSCALL_FDATASYNC_RETURN = 30;
+
+int _HOOKID_IOSYSCALL_FLOCK_ENTRY = 31;
+int _HOOKID_IOSYSCALL_FLOCK_RETURN = 32;
+
+int _HOOKID_AIO_IO_SETUP_ENTRY = 1;
+int _HOOKID_AIO_IO_SETUP_RETURN = 2;
+int _HOOKID_AIO_IO_SUBMIT_ENTRY = 3;
+int _HOOKID_AIO_IO_SUBMIT_RETURN = 4;
+int _HOOKID_AIO_IO_SUBMIT_ONE_ENTRY = 5;
+int _HOOKID_AIO_IO_SUBMIT_ONE_RETURN = 6;
+int _HOOKID_AIO_IO_GETEVENTS_ENTRY = 7;
+int _HOOKID_AIO_IO_GETEVENTS_RETURN = 8;
+int _HOOKID_AIO_IO_DESTROY_ENTRY = 9;
+int _HOOKID_AIO_IO_DESTROY_RETURN = 10;
+int _HOOKID_AIO_IO_CANCEL_ENTRY = 11;
+int _HOOKID_AIO_IO_CANCEL_RETURN = 12;
 
 typedef struct _lket_pkt_header {
 	int16_t	total_size;
@@ -111,6 +174,6 @@ gint compareFunc(gconstpointer a, gconstpointer b, gpointer user_data);
 void destroyAppName(gpointer data);
 
 void register_events(int evt_type, FILE *infp, size_t size);
-void ascii_print(lket_pkt_header header, FILE *infp, FILE *outfile, int evt_type);
+int ascii_print(lket_pkt_header header, FILE *infp, FILE *outfile, int evt_type);
 char *get_fmtstr(char *fmt);
 #endif
