@@ -36,7 +36,7 @@ global
 	GROUP_NETDEV,
 	HOOKID_NETDEV_RECEIVE, HOOKID_NETDEV_TRANSMIT,
 
-	/* io related syscall */
+	/* io related syscall (not including AIO related calls) */
 	GROUP_IOSYSCALL,
 
 	HOOKID_IOSYSCALL_OPEN_ENTRY,
@@ -88,7 +88,25 @@ global
 	HOOKID_IOSYSCALL_FDATASYNC_RETURN,
 
 	HOOKID_IOSYSCALL_FLOCK_ENTRY,
-	HOOKID_IOSYSCALL_FLOCK_RETURN
+	HOOKID_IOSYSCALL_FLOCK_RETURN,
+
+	/* AIO related calls */
+	GROUP_AIO,
+
+	HOOKID_AIO_IO_SETUP_ENTRY,
+	HOOKID_AIO_IO_SETUP_RETURN,
+	HOOKID_AIO_IO_SUBMIT_ENTRY,
+	HOOKID_AIO_IO_SUBMIT_RETURN,
+	HOOKID_AIO_IO_SUBMIT_ONE_ENTRY,
+	HOOKID_AIO_IO_SUBMIT_ONE_RETURN,
+	HOOKID_AIO_IO_GETEVENTS_ENTRY,
+	HOOKID_AIO_IO_GETEVENTS_RETURN,
+	HOOKID_AIO_IO_DESTROY_ENTRY,
+	HOOKID_AIO_IO_DESTROY_RETURN,
+	HOOKID_AIO_IO_CANCEL_ENTRY,
+	HOOKID_AIO_IO_CANCEL_RETURN
+
+	
 %{
 /* used in embedded c codes */
 
@@ -102,6 +120,7 @@ int _GROUP_SCSI = 6;
 int _GROUP_PAGEFAULT = 7;
 int _GROUP_NETDEV = 8;
 int _GROUP_IOSYSCALL = 9;
+int _GROUP_AIO = 10;
 
 /* hookIDs defined inside each group */
 int _HOOKID_REGSYSEVT = 1;
@@ -178,6 +197,19 @@ int _HOOKID_IOSYSCALL_FDATASYNC_RETURN = 30;
 
 int _HOOKID_IOSYSCALL_FLOCK_ENTRY = 31;
 int _HOOKID_IOSYSCALL_FLOCK_RETURN = 32;
+
+int _HOOKID_AIO_IO_SETUP_ENTRY = 1;
+int _HOOKID_AIO_IO_SETUP_RETURN = 2;
+int _HOOKID_AIO_IO_SUBMIT_ENTRY = 3;
+int _HOOKID_AIO_IO_SUBMIT_RETURN = 4;
+int _HOOKID_AIO_IO_SUBMIT_ONE_ENTRY = 5;
+int _HOOKID_AIO_IO_SUBMIT_ONE_RETURN = 6;
+int _HOOKID_AIO_IO_GETEVENTS_ENTRY = 7;
+int _HOOKID_AIO_IO_GETEVENTS_RETURN = 8;
+int _HOOKID_AIO_IO_DESTROY_ENTRY = 9;
+int _HOOKID_AIO_IO_DESTROY_RETURN = 10;
+int _HOOKID_AIO_IO_CANCEL_ENTRY = 11;
+int _HOOKID_AIO_IO_CANCEL_RETURN = 12;
 
 %}
 
@@ -267,6 +299,26 @@ function hookid_init()
 
 	HOOKID_IOSYSCALL_FLOCK_ENTRY = 31
 	HOOKID_IOSYSCALL_FLOCK_RETURN = 32
+
+	GROUP_AIO = 10
+
+	HOOKID_AIO_IO_SETUP_ENTRY = 1
+	HOOKID_AIO_IO_SETUP_RETURN = 2
+
+	HOOKID_AIO_IO_SUBMIT_ENTRY = 3
+	HOOKID_AIO_IO_SUBMIT_RETURN = 4
+
+	HOOKID_AIO_IO_SUBMIT_ONE_ENTRY = 5
+	HOOKID_AIO_IO_SUBMIT_ONE_RETURN = 6
+
+	HOOKID_AIO_IO_GETEVENTS_ENTRY = 7
+	HOOKID_AIO_IO_GETEVENTS_RETURN = 8
+
+	HOOKID_AIO_IO_DESTROY_ENTRY = 9
+	HOOKID_AIO_IO_DESTROY_RETURN = 10
+
+	HOOKID_AIO_IO_CANCEL_ENTRY = 11
+	HOOKID_AIO_IO_CANCEL_RETURN = 12
 }
 
 
