@@ -111,10 +111,12 @@ function register_event(grpid:long, hookid:long, evt_type:long, fmt:string, name
 	_lket_trace(_GROUP_REGEVT, THIS->evt_type, "%1b%1b%0s%0s", THIS->grpid,
 		THIS->hookid, THIS->fmt, THIS->names); 
 
+#if !defined(ASCII_TRACE)
         total_length = &_stp_pbuf[cpu][STP_PRINT_BUF_START];
         *(int16_t *)total_length = _stp_pbuf_len[cpu] - 4;
-
+#endif
 	_stp_print_flush();
+
 %}
 
 function register_sys_events()
@@ -243,6 +245,39 @@ function register_sys_events()
 	register_sys_event(GROUP_IOSYSCALL, HOOKID_IOSYSCALL_FLOCK_ENTRY,
 		"INT64:INT32", "fd:operation")
 	register_sys_event(GROUP_IOSYSCALL, HOOKID_IOSYSCALL_FLOCK_RETURN,
+		"INT64", "return")
+
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_SETUP_ENTRY,
+		"INT32:INT64", "nr_events:ctxp_uaddr")
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_SETUP_RETURN,
+		"INT64", "return")
+
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_SUBMIT_ENTRY,
+		"INT64:INT32:INT64", "ctx_id:nr:iocbpp_uaddr")
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_SUBMIT_RETURN,
+		"INT64", "return")
+
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_SUBMIT_ONE_ENTRY,
+		"INT64:INT64:INT16:INT16:INT32:INT64:INT64:INT64", 
+		"ctx:user_iocb_uaddr:aio_lio_opcode:aio_reqprio:aio_fildes:aio_buf:aio_nbytes:aio_offset")
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_SUBMIT_ONE_RETURN,
+		"INT64", "return")
+
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_DESTROY_ENTRY,
+		"INT64", "ctx")
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_DESTROY_RETURN,
+		"INT64", "return")
+
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_GETEVENTS_ENTRY,
+		"INT64:INT32:INT32:INT64:INT32:INT32", 
+		"ctx_id:min_nr:nr:events_uaddr:tv_sec:tv_nsec")
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_GETEVENTS_RETURN,
+		"INT64", "return")
+
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_CANCEL_ENTRY,
+		"INT64:INT64:INT64", 
+		"ctx_id:iocb_uaddr:result_uaddr")
+	register_sys_event(GROUP_AIO, HOOKID_AIO_IO_CANCEL_RETURN,
 		"INT64", "return")
 }
 
